CRUD implementation for Crop/SellerAccount/BuyerAccount.

--- a/Source/OurFood/src/main/resources/messages.properties
+++ b/Source/OurFood/src/main/resources/messages.properties
@@ -6,154 +6,7 @@ user.notunique.primaiyEmail = Email Address is already registered
 user.login.didnotwork = Either User Name(Email) OR Password is incorrect
 user.terms.notagreed = Terms not agreed
 
-
-actiontype.EMAIL = Email
-actiontype.CALL = Call
-actiontype.SMS = SMS
-actiontype.ADDRESS = Location
-actiontype.FACEBOOK = Facebook
-actiontype.TWITTER = Twitter
-actiontype.IMAGE = Image
-actiontype.YOUTUBE_URL = Youtube URL
-actiontype.YOUTUBE_VIDEO = Youtube Video
-actiontype.INFO = Text
-actiontype.URL = Website Link
-actiontype.LINKEDIN = Linkedin
-actiontype.CLAIMACTIONSET = Claim Action Set
-actiontype.SUBSCRIBE = Subscribe to Notifications
-actiontype.CALENDAR = Calendar Event
-actiontype.APPLITE_LINK = AppLite Link
-actiontype.JSON_TEXT = Json Text
-actiontype.SCHEDULE = Schedule
-actiontype.HTML_INFO = HTML Info
-actiontype.ACTION_GROUP = Component Group
-actiontype.INLINE_TEXT = Inline Text
-actiontype.INLINE_HTML_INFO = Inline HTML
-actiontype.FILE = File
-actiontype.CONTACT_CARD = Contact Card
-actiontype.GOOGLE_PLUS = Google+
-actiontype.PINTEREST = Pinterest
-actiontype.INSTAGRAM = Instagram
-actiontype.IMAGE_CAROUSEL = Image Carousel
-actiontype.MULTIPLE_FILES = Multiple Files
-actiontype.OFFER = Offer
-actiontype.IMAGE_TEXT = Image and Text
-actiontype.IMAGE_GALLERY = Image gallery
-actiontype.NEWS_BOARD = Notice Board
-actiontype.GENERIC_ACTIONS = General
-actiontype.TAB = Tab View
-actiontype.VALUE_ADS_BOARD = Value Ads Board
-actiontype.VALUE_AD = Value Ad
-actiontype.JOB_POSTING = Job Posting
-
-appMessageType.IN_APP_AND_SMS = Applite & SMS
-appMessageType.IN_APP = Applite
-appMessageType.SMS = SMS
-
-responseform.RATING = Feedback
-responseform.CALLBACK = Register Callback
-responseform.RESTAURANT_FEEDBACK= Restaurants Feedback
-
-actionGroupType.GENERIC = Generic
-actionGroupType.APPMENU = Menu Options
-actionGroupType.LANDINGPAGENAVIGATION = Landing Screen Options
-actionGroupType.MAINACTIONS = Main Screen Options
-actionGroupType.SECONDARYACTIONS = Secondary Screen Options
-actionGroupType.NEWS_BOARD = Notice Board
-actionGroupType.SPONSORS = Sponsor Links
-actionGroupType.IMAGE_GALLERY = Image Gallery
-
-actionCategoryType.CONTACT_INFO = Contact Info
-actionCategoryType.SOCIAL = Social
-actionCategoryType.INFORMATION = Information
-actionCategoryType.GROUP = Group
-actionCategoryType.FORMS = Forms
-actionCategoryType.LINKS = Links
-actionCategoryType.EVENT = Event
-actionCategoryType.IMAGE = Image
-actionCategoryType.FILE = Attachments
-actionCategoryType.OTHER = Other
-
-userType.NONE = None
-userType.MOBILE = Mobile
-userType.WEB = Web
-userType.MOBILEANDWEB = Mobile and Web
-userType.API = API
-
-layoutDesignType.SINGLE_SCREEN = Single Screen
-layoutDesignType.SIMPLE_MENU = Simple Menu
-layoutDesignType.NEWS_BOARD = News Board
-layoutDesignType.SLIDING_TABS = Sliding Tabs
-layoutDesignType.CONTEXT_MENU =  Context Menu
-layoutDesignType.AD_BOARD =  Ad Board
-
-businessCategoryType.GENERAL = General
-businessCategoryType.RESTAURANT = Restaurant
-businessCategoryType.EVENT = Event
-businessCategoryType.EDUCATION = Education
-businessCategoryType.ORGANIZATION = Organization
-businessCategoryType.ADVERTISEMENT = Advertisement
-businessCategoryType.REALESTATE = Real Estate
-businessCategoryType.PRODUCT = Product
-businessCategoryType.OTHERS =  Others
-businessCategoryType.SYSTEM_APP =  System App
-
-uiThemeType.LIGHT = Light.Blue
-uiThemeType.DARK = Dark
-uiThemeType.GOLD = Gold
-uiThemeType.LIGHT_RED = Light.Red
-
-sharedPreferenceType.PUBLIC = Public
-sharedPreferenceType.PRIVATE = Private
-sharedPreferenceType.SHARED = Shared
-
-securityPreferenceType.ANONYMOUS = Anonymous
-securityPreferenceType.PASSWORD = Password
-securityPreferenceType.REGISTERED = Registered
-securityPreferenceType.REGISTERED_PASSWORD = Registered + Password
-securityPreferenceType.REGISTERED_APPLITE_USER = Registered + Applite User
-
-as.scancount = You are the {0} visitor
-
-as.flaticon.CALL = flaticon-call10
-as.flaticon.CALENDAR = flaticon-calendar60
-as.flaticon.SMS = flaticon-sms1
-as.flaticon.EMAIL = flaticon-email109
-as.flaticon.ADDRESS = flaticon-situation
-as.flaticon.RATING = flaticon-review2
-as.flaticon.CALLBACK = flaticon-review2
-as.flaticon.RESTAURANT_FEEDBACK = flaticon-review2
-as.flaticon.TWITTER = flaticon-twitter42
-as.flaticon.FACEBOOK = flaticon-facebook54
-as.flaticon.URL = flaticon-earth213
-as.flaticon.CLAIMACTIONSET = flaticon-textlines8
-as.flaticon.INFO = flaticon-note65
-as.flaticon.SUBSCRIBE = flaticon-notebook88
-as.flaticon.LINKEDIN = flaticon-social123
-as.flaticon.CALLBACK = flaticon-call37
-as.flaticon.APPLITE_LINK = flaticon-earth213
-as.flaticon.JSON_TEXT = flaticon-note65
-as.flaticon.INLINE_TEXT = flaticon-note65
-as.flaticon.INLINE_HTML_INFO = flaticon-note65
-as.flaticon.FILE = flaticon-note65
-as.flaticon.MULTIPLE_FILES = flaticon-note65
-as.flaticon.SCHEDULE = flaticon-calendar60
-as.flaticon.HTML_INFO = flaticon-note65
-as.flaticon.ACTION_GROUP = flaticon-earth213
-as.flaticon.IMAGE = flaticon-earth213
-as.flaticon.IMAGE_CAROUSEL = flaticon-earth213
-as.flaticon.YOUTUBE_URL = flaticon-earth213
-as.flaticon.YOUTUBE_VIDEO = flaticon-earth213
-as.flaticon.CONTACT_CARD = flaticon-call10
-as.flaticon.GOOGLE_PLUS = flaticon-social123
-as.flaticon.PINTEREST = flaticon-social123
-as.flaticon.INSTAGRAM = flaticon-social123
-as.flaticon.OFFER = flaticon-note65
-as.flaticon.VALUE_AD = flaticon-note65
-as.flaticon.IMAGE_TEXT = flaticon-earth213
-as.flaticon.IMAGE_GALLERY = flaticon-earth213
-as.flaticon.NEWS_BOARD = flaticon-note65
-as.flaticon.GENERIC_ACTIONS = flaticon-earth213
-as.flaticon.TAB = flaticon-earth213
-as.flaticon.VALUE_ADS_BOARD = flaticon-note65
-as.flaticon.JOB_POSTING = flaticon-note65
+cropCategory.NONE = None
+cropCategory.PULSES = Pulses
+cropCategory.VEGETABLES = Vegetables
+cropCategory.FRUITS = Fruits
