CRUD for basic SellerOrder.

--- a/Source/OurFood/src/main/resources/messages.properties
+++ b/Source/OurFood/src/main/resources/messages.properties
@@ -10,3 +10,5 @@ cropCategory.NONE = None
 cropCategory.PULSES = Pulses
 cropCategory.VEGETABLES = Vegetables
 cropCategory.FRUITS = Fruits
+cropCategory.MILLETS = Millets
+cropCategory.SPICES = Spices
