Refactored, Renamed buyacc -> buyeraccount. crop -> produce.

--- a/Source/OurFood/src/main/resources/messages.properties
+++ b/Source/OurFood/src/main/resources/messages.properties
@@ -6,9 +6,9 @@ user.notunique.primaiyEmail = Email Address is already registered
 user.login.didnotwork = Either User Name(Email) OR Password is incorrect
 user.terms.notagreed = Terms not agreed
 
-cropCategory.NONE = None
-cropCategory.PULSES = Pulses
-cropCategory.VEGETABLES = Vegetables
-cropCategory.FRUITS = Fruits
-cropCategory.MILLETS = Millets
-cropCategory.SPICES = Spices
+produceCategory.OTHERS = Others
+produceCategory.PULSES = Pulses
+produceCategory.VEGETABLES = Vegetables
+produceCategory.FRUITS = Fruits
+produceCategory.MILLETS = Millets
+produceCategory.SPICES = Spices
