SellerOrder update implementation.

--- a/Source/OurFood/src/main/resources/messages.properties
+++ b/Source/OurFood/src/main/resources/messages.properties
@@ -12,3 +12,25 @@ produceCategory.VEGETABLES = Vegetables
 produceCategory.FRUITS = Fruits
 produceCategory.MILLETS = Millets
 produceCategory.SPICES = Spices
+
+sellerOrderStatus.NONE = None
+sellerOrderStatus.ORDERED = Ordered
+sellerOrderStatus.PROCESSED = Processed
+sellerOrderStatus.ON_HOLD = On Hold
+
+sellerOrderItemStatus.NONE = None
+sellerOrderItemStatus.ORDERED = Ordered
+sellerOrderItemStatus.INSPECTED = Inspected
+sellerOrderItemStatus.IN_PROCESSING_CENTER = In Processing Center
+sellerOrderItemStatus.PROCESSED = Processed
+sellerOrderItemStatus.ON_HOLD = On Hold
+
+buyerOrderStatus.NONE = None
+buyerOrderStatus.ORDERED = Ordered
+buyerOrderStatus.PROCESSED = Processed
+buyerOrderStatus.ON_HOLD = On Hold
+
+paymentStatus.NOT_PAID = Not Paid
+paymentStatus.PAID = Paid
+paymentStatus.PARTIAL_PAID = Partial Paid
+paymentStatus.ON_HOLD = On Hold
