changed from pathvariable to requestParams

--- a/Source/OurFood/src/main/resources/messages.properties
+++ b/Source/OurFood/src/main/resources/messages.properties
@@ -35,3 +35,7 @@ paymentStatus.PAID = Paid
 paymentStatus.PARTIAL_PAID = Partial Paid
 paymentStatus.ON_HOLD = On Hold
 
+produceGrade.NONE = None
+produceGrade.A = A
+produceGrade.B = B
+produceGrade.C = C
